[tool.poetry]
name = "streamlit-llm-app"
version = "0.1.0"
description = ""
authors = ["Ryuya Matsumoto <public@ryuya-matsumoto.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
streamlit = ">=1.41.1,<2.0.0"
pandas = ">=2.2.3,<3.0.0"
pydantic = ">=2.10.6,<3.0.0"
langchain-anthropic = "^0.3.4"
langchain-core = "^0.3.32"
python-dotenv = "^1.0.1"
langchain = "^0.3.16"
pydantic-settings = "^2.7.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"